--- a/TzalemTmuna.csproj
+++ b/TzalemTmuna.csproj
@@ -14,7 +14,7 @@
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -47,20 +47,22 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\DAL.cs" />
+    <Compile Include="DB\FollowedDB.cs" />
+    <Compile Include="DB\FollowingDB.cs" />
     <Compile Include="Forms\Login.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="Objects\Comment.cs" />
+    <Compile Include="Entities\Comment.cs" />
     <Compile Include="DB\GeneralDB.cs" />
-    <Compile Include="DB\IEntity.cs" />
+    <Compile Include="Entities\IEntity.cs" />
     <Compile Include="DB\UserDB.cs" />
-    <Compile Include="Objects\Post.cs" />
+    <Compile Include="Entities\Post.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Objects\User.cs" />
+    <Compile Include="Entities\User.cs" />
     <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
