--- a/TzalemTmuna.csproj
+++ b/TzalemTmuna.csproj
@@ -51,6 +51,12 @@
     <Compile Include="DB\FollowingDB.cs" />
     <Compile Include="DB\PasswordDB.cs" />
     <Compile Include="DB\EmailDB.cs" />
+    <Compile Include="Forms\Register.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Register.Designer.cs">
+      <DependentUpon>Register.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,6 +72,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="ColorPallet.cs" />
+    <Compile Include="Utilities\ValidateTools.cs" />
+    <EmbeddedResource Include="Forms\Register.resx">
+      <DependentUpon>Register.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
