--- a/TzalemTmuna.csproj
+++ b/TzalemTmuna.csproj
@@ -32,6 +32,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>TzalemTmuna.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -49,8 +52,17 @@
     <Compile Include="Data\DAL.cs" />
     <Compile Include="DB\FollowersDB.cs" />
     <Compile Include="DB\FollowingDB.cs" />
-    <Compile Include="DB\PasswordDB.cs" />
     <Compile Include="DB\EmailDB.cs" />
+    <Compile Include="Entities\LoginUser.cs" />
+    <Compile Include="Forms\EditProfile.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\EditProfile.Designer.cs">
+      <DependentUpon>EditProfile.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ProfilePicture.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Forms\Register.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -72,7 +84,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="ColorPallet.cs" />
+    <Compile Include="Utilities\FileTools.cs" />
+    <Compile Include="Utilities\PasswordTools.cs" />
     <Compile Include="Utilities\ValidateTools.cs" />
+    <EmbeddedResource Include="Forms\EditProfile.resx">
+      <DependentUpon>EditProfile.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Register.resx">
       <DependentUpon>Register.cs</DependentUpon>
     </EmbeddedResource>
@@ -109,6 +126,12 @@
     <PackageReference Include="MetroModernUI">
       <Version>1.4.0</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\emptyprofilepicture.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Users\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
