posts are pretty much a thing right now?

--- a/TzalemTmuna/App.config
+++ b/TzalemTmuna/App.config
@@ -11,10 +11,10 @@
     <userSettings>
         <TzalemTmuna.Properties.Settings>
             <setting name="username" serializeAs="String">
-                <value>test</value>
+                <value />
             </setting>
             <setting name="password" serializeAs="String">
-                <value>test</value>
+                <value />
             </setting>
         </TzalemTmuna.Properties.Settings>
     </userSettings>
