Cleaned up themes

--- a/TzalemTmuna/App.config
+++ b/TzalemTmuna/App.config
@@ -16,6 +16,9 @@
             <setting name="password" serializeAs="String">
                 <value />
             </setting>
+            <setting name="darkMode" serializeAs="String">
+                <value>True</value>
+            </setting>
         </TzalemTmuna.Properties.Settings>
     </userSettings>
 </configuration>
