--- a/TzalemTmuna/Properties/Settings.settings
+++ b/TzalemTmuna/Properties/Settings.settings
@@ -8,5 +8,8 @@
     <Setting Name="password" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="darkMode" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
