Accent color customization!!!

--- a/TzalemTmuna/App.config
+++ b/TzalemTmuna/App.config
@@ -19,6 +19,9 @@
             <setting name="darkMode" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="accentColor" serializeAs="String">
+                <value>Teal</value>
+            </setting>
         </TzalemTmuna.Properties.Settings>
     </userSettings>
 </configuration>
