forgot password service!

--- a/TzalemTmuna/App.config
+++ b/TzalemTmuna/App.config
@@ -22,6 +22,12 @@
             <setting name="accentColor" serializeAs="String">
                 <value>Teal</value>
             </setting>
+            <setting name="emailForgotPassword" serializeAs="String">
+                <value>changeme@email.com</value>
+            </setting>
+            <setting name="passwordForgotPassword" serializeAs="String">
+                <value>changeme</value>
+            </setting>
         </TzalemTmuna.Properties.Settings>
     </userSettings>
 </configuration>
