--- a/TzalemTmuna/TzalemTmuna.csproj
+++ b/TzalemTmuna/TzalemTmuna.csproj
@@ -50,6 +50,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -59,9 +60,13 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="TzalemTmuna">
+      <HintPath>obj\Debug\TzalemTmuna.exe</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\DAL.cs" />
+    <Compile Include="DB\AlertDB.cs" />
     <Compile Include="DB\ReportDB.cs" />
     <Compile Include="DB\LikeDB.cs" />
     <Compile Include="DB\CommentDB.cs" />
@@ -70,6 +75,7 @@
     <Compile Include="DB\FollowingDB.cs" />
     <Compile Include="DB\EmailDB.cs" />
     <Compile Include="DB\UserDB.cs" />
+    <Compile Include="Entities\Alert.cs" />
     <Compile Include="Entities\Report.cs" />
     <Compile Include="Entities\LoginUser.cs" />
     <Compile Include="Entities\Post.cs" />
@@ -96,6 +102,18 @@
     </Compile>
     <Compile Include="Forms\ChangePassword.Designer.cs">
       <DependentUpon>ChangePassword.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Alerts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Alerts.Designer.cs">
+      <DependentUpon>Alerts.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\AlertItem.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\AlertItem.Designer.cs">
+      <DependentUpon>AlertItem.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\ForgotPassword.cs">
       <SubType>Form</SubType>
@@ -226,6 +244,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ChangePassword.resx">
       <DependentUpon>ChangePassword.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Alerts.resx">
+      <DependentUpon>Alerts.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AlertItem.resx">
+      <DependentUpon>AlertItem.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\ForgotPassword.resx">
       <DependentUpon>ForgotPassword.cs</DependentUpon>
@@ -379,6 +403,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\darkVerified.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\baseline_notifications_white_36dp.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
